--- a/themes/bootstrap3/templates/librarycards/editcard.phtml
+++ b/themes/bootstrap3/templates/librarycards/editcard.phtml
@@ -1,6 +1,6 @@
 <?php
   // Set up page title:
-  $pageTitle = empty($this->card->id) ? 'Add a Library Card' : 'Edit Library Card';
+  $pageTitle = empty($this->card->getId()) ? 'Add a Library Card' : 'Edit Library Card';
   $this->headTitle($this->translate($pageTitle));
 
   // Set up breadcrumbs:
@@ -13,8 +13,8 @@
 
 <h2><?=$this->transEsc($pageTitle); ?></h2>
 
-<form class="form-edit-card" method="post" name="<?=empty($this->card->id) ? 'newCardForm' : 'editCardForm'?>" autocomplete="off" data-clear-account-cache>
-  <input type="hidden" name="id" value="<?=empty($this->card->id) ? 'NEW' : $this->escapeHtmlAttr($this->card->id) ?>">
+<form class="form-edit-card" method="post" name="<?=empty($this->card->getId()) ? 'newCardForm' : 'editCardForm'?>" autocomplete="off" data-clear-account-cache>
+  <input type="hidden" name="id" value="<?=empty($this->card->getId()) ? 'NEW' : $this->escapeHtmlAttr($this->card->getId()) ?>">
   <div class="form-group">
     <label class="control-label" for="card_name"><?=$this->transEsc('Library Card Name'); ?>:</label>
     <input id="card_name" class="form-control" type="text" name="card_name" value="<?=$this->escapeHtmlAttr($this->cardName)?>">
@@ -41,7 +41,7 @@
   <?php if (null === $this->loginMethod || 'password' === $this->loginMethod): ?>
     <div class="form-group">
       <label class="control-label" for="login_password"><?=$this->transEsc('Password')?>:</label>
-      <input id="login_password" type="password" name="password" value="" placeholder="<?=!empty($this->card->id) ? $this->transEscAttr('library_card_edit_password_placeholder') : ''?>" class="form-control">
+      <input id="login_password" type="password" name="password" value="" placeholder="<?=!empty($this->card->getId()) ? $this->transEscAttr('library_card_edit_password_placeholder') : ''?>" class="form-control">
     </div>
   <?php endif; ?>
   <div class="form-group">
