--- a/themes/bootstrap3/templates/search/facet-list.phtml
+++ b/themes/bootstrap3/templates/search/facet-list.phtml
@@ -39,11 +39,10 @@
   <input class="ajax_param" data-name="contains" placeholder="<?=$this->transEscAttr('Filter')?>" class="form-control" type="text">
 <?php endif; ?>
 <input class="ajax_param" data-name="facet" type="hidden" value="<?=$this->facet?>">
-<input class="ajax_param" data-name="exclude" type="hidden" value="<?=$this->exclude?>">
-<input class="ajax_param" data-name="operator" type="hidden" value="<?=$this->operator?>">
-<input class="ajax_param" data-name="page" type="hidden" value="<?=$this->page?>">
-<input class="ajax_param" data-name="sort" type="hidden" value="<?=$this->sort?>">
-<input class="ajax_param" data-name="searchAction" type="hidden" value="<?=$searchAction?>">
+<input class="ajax_param" data-name="facetexclude" type="hidden" value="<?=$this->exclude?>">
+<input class="ajax_param" data-name="facetop" type="hidden" value="<?=$this->operator?>">
+<input class="ajax_param" data-name="facetpage" type="hidden" value="<?=$this->page?>">
+<input class="ajax_param" data-name="facetsort" type="hidden" value="<?=$this->sort?>">
 <input class="ajax_param" data-name="urlBase" type="hidden" value="<?=$urlBase?>">
 
 
