Fix more-Button in AJAX facet-list

--- a/themes/bootstrap3/templates/search/facet-list.phtml
+++ b/themes/bootstrap3/templates/search/facet-list.phtml
@@ -62,7 +62,7 @@
     $this->inlineScript()->appendFile('facet_list.js');
 
     $js = <<<JS
-        getFacetListContent();
+        updateFacetListContent();
 
         if ($.isReady) {
             setupFacetList();
