--- a/themes/bootstrap3/templates/search/facet-list-content.phtml
+++ b/themes/bootstrap3/templates/search/facet-list-content.phtml
@@ -9,7 +9,7 @@
         'facet' => $item,
         'group' => $this->facet,
         'url' => $this->results->getUrlQuery(),
-        'urlBase' => $this->urlBase
+        'urlBase' => $this->urlBase,
       ]) ?>
     <?php endforeach; ?>
   <?php endif; ?>
