--- a/themes/bootstrap3/templates/search/facet-list.phtml
+++ b/themes/bootstrap3/templates/search/facet-list.phtml
@@ -55,23 +55,7 @@
   <?php endforeach; ?>
 </div>
 <button class="btn btn-default lightbox-only" data-dismiss="modal"><?=$this->translate('close') ?></button>
+
+<?php $this->inlineScript()->appendFile('facets.js'); ?>
 <?=$this->inlineScript(\Laminas\View\Helper\HeadScript::SCRIPT, '(typeof VuFind.lightbox_facets !== "undefined") && VuFind.lightbox_facets.setup();', 'SET'); ?>
-
-<?php
-    // Set up ajax script; we do this inline instead of in the header for lightbox compatibility:
-    $this->inlineScript()->appendFile('facet_list.js');
-
-    $js = <<<JS
-        updateFacetListContent();
-
-        if ($.isReady) {
-            setupFacetList();
-        } else {
-            $(document).ready(function() {
-                setupFacetList();
-            });
-        }
-        JS;
-
-    echo $this->inlineScript()->appendScript($js);
-?>
+<?=$this->inlineScript()->appendScript('updateFacetListContent();');?>
