facet-list: Improve AJAX lightbox detection

--- a/themes/bootstrap3/templates/search/facet-list-content.phtml
+++ b/themes/bootstrap3/templates/search/facet-list-content.phtml
@@ -1,7 +1,7 @@
 <div class="full-facet-list facet-group<?php if(!$active): ?> hidden<?php endif; ?>" id="facet-list-<?=$this->escapeHtmlAttr($key) ?>">
   <?php if ($active): ?>
     <?php if ($this->page > 1): ?>
-      <a href="<?=$urlBase . '&amp;facetpage=' . ($this->page - 1) . '&amp;facetsort=' . urlencode($this->sort) ?>" class="facet js-facet-prev-page" data-page="<?=($this->page + 1) ?>" data-sort="<?=$this->sort ?>" data-limit="<?=count($this->data) ?>" data-lightbox-ignore><?=$this->translate('prev_ellipsis') ?></a>
+      <a href="<?=$urlBase . '&amp;facetpage=' . ($this->page - 1) . '&amp;facetsort=' . urlencode($this->sort) . '&amp;contains=' . urlencode($this->contains) ?>" class="facet js-facet-prev-page" data-page="<?=($this->page + 1) ?>" data-sort="<?=$this->sort ?>" data-limit="<?=count($this->data) ?>" data-lightbox-ignore><?=$this->translate('prev_ellipsis') ?></a>
     <?php endif; ?>
     <?php foreach ($this->data as $item): ?>
       <?=$this->render('Recommend/SideFacets/single-facet.phtml', [
@@ -14,8 +14,11 @@
     <?php endforeach; ?>
   <?php endif; ?>
   <?php if ($this->anotherPage): ?>
-    <a href="<?=$urlBase . '&amp;facet=' . $facet . '&amp;facetpage=' . ($this->page + 1) . '&amp;facetsort=' . urlencode($key) ?>" class="facet js-facet-next-page" data-page="<?=($this->page + 1) ?>" data-sort="<?=$this->escapeHtmlAttr($key) ?>">
+    <a href="<?=$urlBase . '&amp;facet=' . $facet . '&amp;facetpage=' . ($this->page + 1) . '&amp;facetsort=' . urlencode($key) . '&amp;contains=' . urlencode($this->contains) ?>" class="facet js-facet-next-page" data-page="<?=($this->page + 1) ?>" data-sort="<?=$this->escapeHtmlAttr($key) ?>">
       <span class="text"><?=$this->translate('more_ellipsis') ?></span>
     </a>
+  <?php endif; ?>
+  <?php if ($this->inLightbox || $this->ajaxLightbox): ?>
+    <?=$this->inlineScript(\Laminas\View\Helper\HeadScript::SCRIPT, 'VuFind.lightbox_facets.setup();', 'SET')?>
   <?php endif; ?>
 </div>
