--- a/themes/bootstrap3/templates/search/controls/showing.phtml
+++ b/themes/bootstrap3/templates/search/controls/showing.phtml
@@ -10,21 +10,25 @@
       isset($this->skipTotalCount) ? 'showing_results_html' : 'showing_results_of_html',
       $transParams
   );
-?>
-<?php // Use search-heading if it's set, but append only if it's not empty to avoid extra whitespace: ?>
-<?php if ($this->slot('search-heading')->isset()): ?>
-  <?php if ($heading = $this->slot('search-heading')->get()): ?>
-    <?php $showingResults .= " $heading"; ?>
-  <?php endif; ?>
-<?php elseif ($this->params->getSearchType() == 'basic'):
-  $showingResults = $this->translate(
-      isset($this->skipTotalCount) ? 'showing_results_for_html' : 'showing_results_of_for_html',
-      $transParams
-  );
-endif; ?>
 
+  // Use simple format if search-heading is set, search type is not basic or we have a simple top paginator enabled:
+  $topPaginator = $this->results ? $this->results->getOptions()->getTopPaginatorStyle() : '';
+  if ($this->slot('search-heading')->isset() || $this->params->getSearchType() !== 'basic' || 'simple' === $topPaginator) {
+    $showingResults = !empty($this->skipTotalCount)
+      ? $this->translate('showing_results_html', $transParams)
+      : $this->translate('showing_results_of_html', $transParams);
+    // Append search-heading only if it's not empty to avoid extra whitespace:
+    if ($heading = $this->slot('search-heading')->get()) {
+      $showingResults .= $heading;
+    }
+  } else {
+    $showingResults = !empty($this->skipTotalCount)
+      ? $this->translate('showing_results_for_html', $transParams)
+      : $this->translate('showing_results_of_for_html', $transParams);
+  }
+?>
 <?php $this->layout()->srmessage = $showingResults; ?>
-<?php if ($qtime = $this->results->getQuerySpeed()): ?>
+<?php if ($qtime = $this->results->getQuerySpeed() && 'simple' !== $topPaginator): ?>
   <?=$showingResults; ?><span class="search-query-time">, <?=$this->transEsc('query time')?>: <?=$this->localizedNumber($qtime, 2) . $this->transEsc('seconds_abbrev')?></span>
 <?php else: ?>
   <?=$showingResults; ?>
