facet-list: Fix facet links regarding searchAction

--- a/themes/bootstrap3/templates/search/facet-list.phtml
+++ b/themes/bootstrap3/templates/search/facet-list.phtml
@@ -44,6 +44,7 @@
 <input class="ajax_param" data-name="facetpage" type="hidden" value="<?=$this->page?>">
 <input class="ajax_param" data-name="facetsort" type="hidden" value="<?=$this->sort?>">
 <input class="ajax_param" data-name="urlBase" type="hidden" value="<?=$urlBase?>">
+<input class="ajax_param" data-name="searchAction" type="hidden" value="<?=$searchAction?>">
 <input class="ajax_param" data-name="ajaxLightbox" type="hidden" value="<?=$this->ajaxLightbox ? intval($this->ajaxLightbox) : intval($this->inLightbox) ?>">
 
 
