--- a/themes/bootstrap3/templates/search/results-list.phtml
+++ b/themes/bootstrap3/templates/search/results-list.phtml
@@ -9,6 +9,9 @@
   if ($this->results->getOptions()->loadResultsWithJsEnabled()) {
     $this->resultsClass .= ' js-record-list';
     if ($this->resultsAttrs) {
+      if (!($this->resultsAttrs instanceof \Laminas\View\HtmlAttributesSet)) {
+        throw new \Exception('$this->resultsAttrs must be created with the htmlAttributes view helper');
+      }
       $this->resultsAttrs->add('data-backend', $searchClass);
     } else {
       $this->resultsAttrs = $this->htmlAttributes(['data-backend' => $searchClass,]);
