--- a/themes/bootstrap3/templates/search/results-list.phtml
+++ b/themes/bootstrap3/templates/search/results-list.phtml
@@ -1,6 +1,7 @@
 <?php
   // Create a css class for results from the search class:
   $searchClass = $searchClassCss = $this->params->getSearchClassId();
+  // Convert camelCase to hyphenated-text, unless it's all-uppercase, like EDS:
   if (!ctype_upper($searchClassCss)) {
     $searchClassCss = preg_replace('/([a-zA-Z])(?=[A-Z])/', '$1-', $searchClassCss);
   }
