--- a/themes/bootstrap3/templates/search/controls/sort.phtml
+++ b/themes/bootstrap3/templates/search/controls/sort.phtml
@@ -1,7 +1,7 @@
 <?php $list = $this->params->getSortList(); ?>
 <?php if (!empty($list)): ?>
   <form class="search-sort" action="<?=$this->currentPath()?>" method="get" name="sort">
-    <?=$this->results->getUrlQuery()->asHiddenFields(['sort' => '/.*/']);?>
+    <?=$this->results->getUrlQuery()->asHiddenFields(['sort' => '/.*/', 'page' => '/.*/']);?>
     <label for="sort_options_1"><?=$this->transEsc('Sort')?></label>
     <select id="sort_options_1" name="sort" class="jumpMenu form-control">
       <?php foreach ($list as $sortType => $sortData): ?>
