--- a/themes/bootstrap3/templates/layout/layout.phtml
+++ b/themes/bootstrap3/templates/layout/layout.phtml
@@ -101,7 +101,7 @@
           JS;
 
       if (!empty($lightboxParent)) {
-        $lightboxParent = urlencode($lightboxParent);
+        $lightboxParent = json_encode((string)$lightboxParent);
         $appendScripts[] = <<<JS
                    VuFind.lightbox.parent = {$lightboxParent};
             JS;
