fix: at registered mark.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
     -->
     <div class="header-announcement">
       <p>
-        Join us at <a href="https://openlibraryfoundation.org/about/wolfcon/upcoming/">WOLFcon</a> for <a href="https://vufind.org/wiki/community:conferences:summit_2023">VuFind Summit 2023!</a>
+        Join us at <a href="https://openlibraryfoundation.org/about/wolfcon/upcoming/">WOLFcon</a> for <a href="https://vufind.org/wiki/community:conferences:summit_2023">VuFind® Summit 2023!</a>
          August 22-24 from <abbr id="gmt-time">14:00-17:00 GMT</abbr>.
       </p>
     </div>
