--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,14 +23,13 @@
       <a href="{{ site.baseurl }}/support.html">Support</a>
       <a href="https://github.com/vufind-org/vufind" class="hidden-lg">GitHub</a>
     </div>
-    <!--
-    -->
     <div class="header-announcement">
       <p>
-        Join us at <a href="https://openlibraryfoundation.org/about/wolfcon/upcoming/">WOLFcon</a> for <a href="https://vufind.org/wiki/community:conferences:summit_2023">VuFind® Summit 2023!</a>
-         August 22-24 from <abbr id="gmt-time">14:00-17:00 GMT</abbr>.
+        Join us August 22-24 at <a href="https://openlibraryfoundation.org/about/wolfcon/upcoming/">WOLFcon</a> for <a href="https://vufind.org/wiki/community:conferences:summit_2023">VuFind® Summit 2023!</a>
+        (<a href="https://wolfcon2023.sched.com/overview/type/VuFind">schedule</a>)
       </p>
     </div>
+    <!--
     <script>
       const startTime = new Date(Date.UTC(2023, 8-1, 22, 14, 0, 0));
       const endTime = new Date(Date.UTC(2023, 8-1, 22, 17, 0, 0));
@@ -42,5 +41,6 @@
       document.getElementById("gmt-time")
         .setAttribute("title", `Local Time: ${localStartTime} to ${localEndTime}`);
     </script>
+    -->
     <div class="body">
       <div class="container">
