--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -88,7 +88,10 @@
 }
 
 .top-facets-contents {
+  display: block;
   margin: 2px 0;
+  padding: 0;
+  list-style: none;
 }
 .top-facets .facet,
 .top-facets > strong {
