--- a/themes/bootstrap3/templates/Recommend/SideFacets/cluster-list.phtml
+++ b/themes/bootstrap3/templates/Recommend/SideFacets/cluster-list.phtml
@@ -32,23 +32,26 @@
     }
   }
 ?>
-<div<?php if ($truncateSettings): ?> class="truncate-facets" data-truncate="<?=$this->htmlSafeJsonEncode($truncateSettings)?>"<?php endif; ?>>
+<ul <?php if ($truncateSettings): ?>class="facet__list truncate-facets" data-truncate="<?=$this->htmlSafeJsonEncode($truncateSettings)?>"<?php else: ?>class="facet__list"<?php endif; ?>>
   <?php foreach ($this->cluster['list'] as $i => $thisFacet): ?>
-    <?php if ($i == $this->facets_before_more): ?>
-      <?php if ($alwaysUseLightbox): ?>
-        <a class="facet narrow-toggle more-facets" data-lightbox href="<?=$moreUrl ?>" rel="nofollow">
-          <span class="text"><?=$this->transEsc('more_ellipsis')?></span>
-        </a>
-        <?php break; ?>
+    <li class="facet__list__item">
+      <?php if ($i == $this->facets_before_more): ?>
+        <?php if ($alwaysUseLightbox): ?>
+          <a class="facet narrow-toggle more-facets" data-lightbox href="<?=$moreUrl ?>" rel="nofollow">
+            <span class="text"><?=$this->transEsc('more_ellipsis')?></span>
+          </a>
+          <?php break; ?>
+        <?php endif; ?>
       <?php endif; ?>
-    <?php endif; ?>
-    <?=$this->render('Recommend/SideFacets/single-facet.phtml', [
-      'exclude' => $this->allowExclude,
-      'facet' => $thisFacet,
-      'group' => $this->title,
-      'url' => $this->results->getUrlQuery(),
-      'urlBase' => '',
-    ]) ?>
+
+      <?=$this->render('Recommend/SideFacets/single-facet.phtml', [
+        'exclude' => $this->allowExclude,
+        'facet' => $thisFacet,
+        'group' => $this->title,
+        'url' => $this->results->getUrlQuery(),
+        'urlBase' => '',
+      ]) ?>
+    </li>
   <?php endforeach; ?>
 
   <?php /* LESS and SEE MORE links */ ?>
@@ -59,5 +62,4 @@
       </a>
     <?php endif; ?>
   <?php endif; ?>
-
-</div>
+</ul>
