refactor: simplify JS element creation.

--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -40,10 +40,15 @@
 .facet-tree__summary,
 .facet-tree__leaf {
   display: flex;
-  gap: 0.5rem;
+  gap: inherit;
 }
 .facet-tree__children {
   padding-left: 1rem;
+}
+
+.facet {
+  width: 100%;
+  gap: 0.25rem;
 }
 
 .facet,
