--- a/themes/bootstrap3/templates/layout/js-icons.phtml
+++ b/themes/bootstrap3/templates/layout/js-icons.phtml
@@ -7,7 +7,10 @@ $list = [
     'ui-dots-menu',
     // Facets
     'facet-checked',
+    'facet-closed',
     'facet-exclude',
+    'facet-noncollapsible',
+    'facet-opened',
     'facet-unchecked',
     // Hierarchy tree
     'format-file',
