--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -28,6 +28,32 @@ $thumbnail-width-large:  160px;
   padding-right: 1rem;
   list-style: none;
 }
+// Reset styling of hierarchical facets on the home page:
+.home-facet .facet-tree {
+  li {
+    border: none;
+  }
+
+  .facet-tree__summary {
+    line-height: inherit;
+    padding-top: 0;
+    padding-bottom: 0;
+    .facet-tree__icon-container {
+      line-height: inherit;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
+    .facet {
+      padding: 0;
+      line-height: inherit;
+      .badge {
+        display: none;
+      }
+    }
+  }
+}
+
 @media (min-width: 768px) {
   .search-home-facets,
   .home-facet-container { display: flex; }
