Fix id counter, add aria-label to the button.

--- a/themes/bootstrap3/templates/layout/js-translations.phtml
+++ b/themes/bootstrap3/templates/layout/js-translations.phtml
@@ -23,6 +23,7 @@ $this->jsTranslations()->addStrings(
       'libphonenumber_tooshortidd' => 'libphonenumber_tooshortidd',
       'loading_ellipsis' => 'loading_ellipsis',
       'more_ellipsis' => 'more_ellipsis',
+      'more_info_toggle' => 'more_info_toggle',
       'number_thousands_separator' => [
         'number_thousands_separator', null, ',',
       ],
